--- a/public/style.css
+++ b/public/style.css
@@ -116,7 +116,17 @@ body {
   height: 9vh;
 }
 
-.nav .nav__title {
+.nav__menu-icon {
+  margin-left: 1.8vw;
+  font-size: 1.7em;
+  color: #5D88FA;
+}
+
+.nav__menu-icon:hover {
+  cursor: pointer;
+}
+
+.nav__title {
   margin-left: 2%;
   font-size: 2em;
   font-weight: 500;
@@ -263,7 +273,7 @@ body {
      -moz-appearance: none;
           appearance: none;
   position: absolute;
-  bottom: 0.3%;
+  bottom: 0;
   right: 2%;
   display: inline-block;
   width: 15%;
@@ -281,7 +291,7 @@ body {
 }
 
 .left-panel__add-button__icon {
-  font-size: 1.4em;
+  font-size: 1.4rem;
 }
 
 .topic-content {
@@ -318,6 +328,10 @@ body {
 .topic-content__add-button:hover {
   cursor: pointer;
   background: #5D88FA;
+}
+
+.topic-content__add-button__icon {
+  font-size: 1.4rem;
 }
 
 .topic-content__link {
