--- a/public/style.scss
+++ b/public/style.scss
@@ -63,19 +63,6 @@ $dark-red: rgba(255, 0, 0, 0.8);
 }
 
 
-%button-style {
-    appearance: none;
-    padding: 0.2% 0.5%;
-    background: lightgray;
-    border: solid 2px lightgray;
-    border-radius: 3px;
-    font-size: 1.2em;
-    &:hover {
-        cursor: pointer;
-    }
-}
-
-
 * {
     padding: 0;
     margin: 0;
@@ -139,12 +126,22 @@ body {
     background: $greyish_color;
     padding: 0.5% 0;
     height: 9vh;
-    .nav__title {
-        margin-left: 2%;
-        font-size: 2em;
-        font-weight: 500;
-        color: $lighter_purple;
+}
+
+.nav__menu-icon {
+    margin-left: 1.8vw;
+    font-size: 1.7em;
+    color: $lighter_purple;
+    &:hover {
+        cursor: pointer;
     }
+}
+
+.nav__title {
+    margin-left: 2%;
+    font-size: 2em;
+    font-weight: 500;
+    color: $lighter_purple;
 }
 
 .nav__signup-btn, .nav__login-btn {
@@ -276,7 +273,7 @@ body {
 .left-panel__add-button {
     appearance: none;
     position: absolute;
-    bottom: 0.3%;
+    bottom: 0;
     right: 2%;
     display: inline-block;
     width: 15%;
@@ -296,7 +293,7 @@ body {
 }
 
 .left-panel__add-button__icon {
-    font-size: 1.4em;
+    font-size: 1.4rem;
 }
 
 
@@ -336,6 +333,10 @@ body {
     &:focus {
         @extend %outline-style;
     }
+}
+
+.topic-content__add-button__icon {
+    font-size: 1.4rem;
 }
 
 .topic-content__link {
